# rustnzb

./: .dockerignore  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.local  README.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.4.md  TODO.md  build.rs  completionfix.md  forkmerge.md  generate_release.md  rust-toolchain.toml
.github/workflows/: ci.yml  container-canary.yml  policy.yml  release.yml
apps/rustnzb/: Cargo.toml  config.example.toml
apps/rustnzb/frontend/src/: styles.scss
apps/rustnzb/frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
apps/rustnzb/frontend/src/app/core/models/: queue.model.ts
apps/rustnzb/frontend/src/app/core/services/: theme.service.spec.ts  theme.service.ts
apps/rustnzb/frontend/src/app/features/history/: history-view.component.spec.ts  history-view.component.ts
apps/rustnzb/frontend/src/app/features/queue/: queue-view.component.spec.ts  queue-view.component.ts
apps/rustnzb/frontend/src/app/features/rss/: rss-view.component.ts
apps/rustnzb/frontend/src/app/features/settings/: settings-view.component.ts
apps/rustnzb/frontend/src/app/features/statistics/: statistics-view.component.ts
apps/rustnzb/src/: handlers.rs  server.rs
apps/rustnzb/tests/: e2e_postproc_detection.rs
ci/: BASELINE.md  README.md  migration-policy.sh  run
ci/tasks/: build-ci-images  build-image  build-linux  build-linux-arm64  build-windows  cargo-auth  check  clippy  desktop-test  e2e  fmt  frontend-audit  frontend-test  lib.sh  mirror-github  package-release  promote-dev  recover-v1.3.0  smoke-image  smoke-runtime  test  verify-image-pins
crates/nzb-core/src/: config.rs  db.rs  models.rs  nzb_parser.rs
crates/nzb-dispatch/src/: dispatch_engine.rs  download_engine.rs  news_engine.rs
crates/nzb-news/src/: article.rs  dispatch.rs  downloader.rs  news_wrapper.rs  penalty.rs  server.rs
crates/nzb-nntp/src/: config.rs  connection.rs  downloader.rs  error.rs  pipeline.rs  testutil.rs
crates/nzb-postproc/: Cargo.toml
crates/nzb-postproc/src/: detect.rs  pipeline.rs
crates/nzb-web/: Cargo.toml
crates/nzb-web/src/: article_failure.rs  download_engine.rs  lib.rs  queue_manager.rs  sabnzbd_compat.rs
crates/nzb-web/tests/: harness_typed_errors.rs
demo/: README.md  chunk-3SOZGYPJ.js  chunk-A3RTIM2N.js  chunk-BIKITC2C.js  chunk-BQSR4VGL.js  chunk-BZOOXQAE.js  chunk-FOI5U5JU.js  chunk-FT4DJWVN.js  chunk-HELAWRYD.js  chunk-HM6F3QIN.js  chunk-J6BT6DNA.js  chunk-JJ4VZKA5.js  chunk-L7KKLKXW.js  chunk-MYD44L6A.js  chunk-NH2NBHCX.js  chunk-O6QJF636.js  chunk-PGBDE6IK.js  chunk-PMJ77NI7.js  chunk-S4QRVSES.js  chunk-U6DSUJR4.js  chunk-VUPXKRJL.js  chunk-WS5YOOLJ.js  chunk-ZGTFU5EI.js  chunk-ZTSACVZS.js  index.html  main-XKHTBIG5.js  mock-api.js  styles-BEGLIU3Z.css
desktop/src-tauri/: Cargo.toml
e2e/fixtures/: seed.sql
e2e/helpers/: api.ts  backend.ts  mock-nntp.ts
e2e/tests/: history.spec.ts  queue.spec.ts  settings.spec.ts  statistics.spec.ts
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/features/groups/: groups-view.component.ts
frontend/src/app/features/queue/: queue-view.component.spec.ts  queue-view.component.ts
frontend/src/app/features/settings/: settings-view.component.ts
src/: group_handlers.rs  handlers.rs  main.rs
src/dav/: auth.rs  mod.rs
tests/: group_mark_read.rs
tests/support/: mod.rs
website/: index.html
website/.github/workflows/: dependabot-linear.yml
