[workspace]
resolver = "3"
members = [
    "apps/rustnzb",
    "crates/mock-nntp-server",
    "crates/nzb-core",
    "crates/nzb-decode",
    "crates/nzb-dispatch",
    "crates/nzb-news",
    "crates/nzb-nntp",
    "crates/nzb-postproc",
    "crates/nzb-web",
]
default-members = ["apps/rustnzb"]
exclude = ["benchnzb", "desktop"]

[workspace.package]
version = "1.3.2"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
# HTTP
http = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
# Data
rusqlite = { version = "0.32", features = ["bundled"] }
bytes = "1"
# Decode
crc32fast = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
# OpenTelemetry
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["grpc-tonic", "metrics", "logs", "trace"] }
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"
# Error handling
thiserror = "2"
anyhow = "1"
# Util
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
arc-swap = "1"
rand = "0.9"
hex = "0.4"
base64 = "0.22"
governor = "0.10"
webpki-roots = "0.26"
rustls-pki-types = "1"
# XML
quick-xml = "0.37"
regex = "1"
walkdir = "2"
flate2 = "1"
tokio-socks = "0.5"
notify = "7"
feed-rs = "2"
unicode-normalization = "0.1"

# Shared NZB crates
nzb-web = { version = "0.4.20", path = "crates/nzb-web", features = ["groups-db"] }
nzb-nntp = { version = "0.2.22", path = "crates/nzb-nntp" }
nzb-core = { version = "0.2.16", path = "crates/nzb-core", features = ["groups-db"] }
nzb-decode = { version = "0.1.2", path = "crates/nzb-decode" }
nzb-news = { version = "0.1.12", path = "crates/nzb-news" }
nzb-dispatch = { version = "0.2.6", path = "crates/nzb-dispatch" }
nzb-postproc = { version = "0.2.6", path = "crates/nzb-postproc" }
mock-nntp-server = { path = "crates/mock-nntp-server" }
rust-par2 = { version = "0.1.3" }
yenc-simd = { version = "0.1.1" }

[patch.crates-io]
nzb-web = { path = "crates/nzb-web" }
nzb-dispatch = { path = "crates/nzb-dispatch" }
nzb-nntp = { path = "crates/nzb-nntp" }
nzb-news = { path = "crates/nzb-news" }
nzb-core = { path = "crates/nzb-core" }
nzb-postproc = { path = "crates/nzb-postproc" }
nzb-decode = { path = "crates/nzb-decode" }
