[package]
name = "rustnzb"
version.workspace = true
edition.workspace = true

[features]
default = []
webdav = [
    "dep:nzbdav-core",
    "dep:nzbdav-stream",
    "dep:nzbdav-dav",
    "dep:nzbdav-pipeline",
]
# Vendor openssl (built from source) so cross-compile targets don't need libssl-dev
# for the target arch. Enabled by CI cross-build steps + the Docker multi-arch build.
vendored-openssl = ["dep:openssl-sys"]

[dependencies]
nzb-web = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
# Dependencies for app-specific handlers/server
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }

# Vendored openssl for cross-compile (feature-gated; see [features] vendored-openssl)
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

# WebDAV feature (opt-in: cargo build --features webdav)
nzbdav-core = { version = "0.4.1", registry = "forgejo", optional = true }
nzbdav-stream = { version = "0.4.1", registry = "forgejo", optional = true }
nzbdav-dav = { version = "0.4.1", registry = "forgejo", optional = true }
nzbdav-pipeline = { version = "0.4.1", registry = "forgejo", optional = true, default-features = false }

[package.metadata.deb]
maintainer = "AusAgentSmith <admin@rustnzb.dev>"
copyright = "2024-2026 AusAgentSmith"
extended-description = "A modern Usenet NZB downloader written in Rust. SABnzbd-compatible API, web UI, PAR2 repair, archive extraction."
depends = "p7zip-full"
recommends = "unrar | unrar-free"
section = "net"
priority = "optional"
conf-files = ["/etc/rustnzb/config.toml"]
assets = [
    ["../../target/release/rustnzb", "usr/bin/", "755"],
    ["config.example.toml", "etc/rustnzb/config.toml", "644"],
    ["systemd/rustnzb.service", "lib/systemd/system/rustnzb.service", "644"],
]

[dev-dependencies]
reqwest = { workspace = true, features = ["multipart", "json"] }
serde_json = { workspace = true }
axum = { workspace = true }
tempfile = "3"
arc-swap.workspace = true
nzb-nntp = { workspace = true, features = ["test-support"] }
crc32fast = { workspace = true }
mock-nntp-server = { workspace = true }
