[package]
name = "nzb-postproc"
version = "0.2.6"
edition = "2024"
description = "Post-processing pipeline: PAR2 verify/repair, archive extraction"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-postproc"
readme = "README.md"

[features]
default = []
groups-db = ["nzb-core/groups-db"]

[dependencies]
nzb-core = { version = "0.2.16", path = "../nzb-core" }
tokio = { version = "1", features = ["rt", "sync", "process"] }
tracing = "0.1"
opentelemetry.workspace = true
anyhow = "1"
thiserror = "2"
rust-par2 = "0.1"
walkdir = "2"
zip = "8"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
