[package]
name = "nzb-web"
version = "0.4.20"
edition = "2024"
description = "Usenet download engine: queue management, download orchestration, and background services"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-web"

[features]
default = []
groups-db = ["nzb-postproc/groups-db"]

[dependencies]
nzb-nntp = { version = "0.2.22", path = "../nzb-nntp" }
nzb-decode = { version = "0.1.2", path = "../nzb-decode" }
nzb-postproc = { version = "0.2.6", path = "../nzb-postproc" }
nzb-dispatch = { version = "0.2.6", path = "../nzb-dispatch" }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
http = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
opentelemetry.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
parking_lot = "0.12"
rand = "0.9"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
governor = "0.10"
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
notify = "8"
feed-rs = "2"
regex = "1"
libc = "0.2"
unicode-normalization = "0.1"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"

[dev-dependencies]
tempfile = "3.27.0"
nzb-nntp = { version = "0.2.22", path = "../nzb-nntp", features = ["test-support"] }
yenc-simd = { version = "0.1" }
