[package]
name = "rustnzb-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "rustnzb desktop application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nzb-web = { version = "0.1.4", registry = "forgejo", features = ["groups-db"] }
nzb-core = { version = "0.2.4", registry = "forgejo", features = ["groups-db"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "6"
reqwest = { version = "0.12", default-features = false }
rustls = { version = "0.23", features = ["ring"] }
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
